[package]
name = "raporty-czytelnikow"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["http2", "rustls-tls"] }
dotenvy = "0.15.7"
tokio = { version = "1.45", features = ["macros", "rt"] }
